...
              mainAxisAlignment: MainAxisAlignment.spaceBetween,
              crossAxisAlignment: CrossAxisAlignment.end,
              children: [
                Padding(
                  padding: const EdgeInsets.only(left: 10.0, top: 25.0),
                  child: Text(
                    'Chats',
                    style: TextStyle(
                      fontSize: 25,
                      fontWeight: FontWeight.bold,
                      color: CupertinoTheme.of(context).primaryColor,
                    ),
                  ),
...
                                selectedGroup!.id == group.id) {
                              selectedGroup = null;
                              page = const StartMessagingWidget();
                            }
                          });
                        },
                        username: '',
                        group: group,
                        onPressed: (Group group) {
                          setState(() {
                            selectedGroup = group;
                            page = GroupChatPage(
                              group: group,
...
